--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:gh-pages": "BASE_URL=/BuildStarter/ vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
